# ai

./: .gitignore
claude_code/: OddRepitions.java  index.mjs  package.json  ugly_app.py
cli_project/: README.md  main.py  mcp_client.py  mcp_server.py  project_documentation.md  pyproject.toml
cli_project/core/: chat.py  claude.py  cli.py  cli_chat.py  conversation.py  mcp_chat.py  messenger.py  tools.py
first_llm_project/: app.py
groq_api_project/: basic_conversation.py  chat_conversation.py  custom_prompt_evaluation.py  generic_prompt_evaluation.py  multi_turn_conversation.py  prefilled_assistant_message.py  streaming_conversation.py
mcp_project/: .gitignore  README.md  ai_messenger.py  cli.py  mcp_client.py  mcp_server.py  pyproject.toml
notes_summarizer_web_app/: app.py
